git add . git commit -m "修改之前的实验的bug以及实现实验13" git push origin master

--- a/app/src/main/res/layout/fragment_clock_view.xml
+++ b/app/src/main/res/layout/fragment_clock_view.xml
@@ -6,7 +6,7 @@
     tools:context=".ClockViewFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <com.jnu.student.CustomClockView
+    <com.jnu.student.view.CustomClockView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
