--- a/app/src/main/res/layout/fragment_book_list.xml
+++ b/app/src/main/res/layout/fragment_book_list.xml
@@ -9,6 +9,7 @@
         android:id="@+id/recycle_view_books"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="0dp" />
 
 </FrameLayout>
